--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cx-app-template-phone-dark",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config config/webpack.dev.js --open",
